--- a/style.css
+++ b/style.css
@@ -1,1 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+h1{
+    font-family: "Abril Fatface";
+    text-align: center;
+}
+
+body {
+    font-family: "Source Sans Pro";
+    background-color: rgb(236, 236, 241);
+}
+
+#article_title {
+    font-family: "Roboto Slab";
+}
+nav {
+    border-top: 1px solid #777;
+    border-bottom: 1px solid #777;
+    padding: 0 20px;
+
+}
+
+nav li, a:link {
+    list-style: none;
+    color: #777;
+    display: inline-block;   
+    text-decoration: none;
+    text-align: center;
+    padding: 0 2px;
+
+}
+
+nav ul {
+    padding: 0;
+    width: 100%;
+}
+
+.newspaper-container{
+    background-color: white;
+    box-shadow: #ddd;
+    width:800px;
+    border-radius: 20px;
+    padding: 2%;
+    margin: 2% auto;
+}
+
+.more-articles section {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 45%;    
+    padding: 15px;
+    text-align: left;
+
+}
+.more-articles {
+    border-top: 1px solid #777;
+}
+
+.more-articles section p {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+img {
+    display: block;
+    width:100%;
+}
+
+main {
+    margin-bottom: 5%;
+}
+
+h5 {
+    color: red;
+}
