--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ nav {
     border-top: 1px solid #777;
     border-bottom: 1px solid #777;
     padding: 0 20px;
+    position:sticky;
+    top: 0em;
+    background-color:white ;
 
 }
 
@@ -26,7 +29,6 @@ nav li, a:link {
     text-decoration: none;
     text-align: center;
     padding: 0 2px;
-
 }
 
 nav ul {
